Bug 372885: Minor - [Cancel] and [Submit responses on behalf] buttons should align (Theme boost)

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,10 @@
 }
 /* End nasty hack. */
 
+#page-mod-quiz-report-answersheets-submitresponses .cancel-submit-responses {
+    float: left;
+}
+
 #page-mod-quiz-report-answersheets-attemptsheet .print-sheet,
 #page-mod-quiz-report-answersheets-submitresponses .cancel-submit-responses,
 #page-mod-quiz-report-answersheets-submitresponses .submit-responses {
